--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: lmingul
  * @Date: 2025-11-23 02:13:54
  * @LastEditors: lmingul
- * @LastEditTime: 2025-11-26 23:52:59
+ * @LastEditTime: 2025-11-27 15:08:47
  * @FilePath: \font-test\vue3-project\index.html
  * @Description: 
 -->
@@ -22,11 +22,54 @@
       <button @click="showProject('base')" class="button">基础练习项目</button>
        <button @click="showProject('monterSlayer')" class="button">打怪兽项目</button>
         <button @click="showProject('tree')" class="button">tree组件练习</button>
-
         <br />
-
         <div v-if="showWhitchTeam==='monterSlayer'">
           <h2>打怪兽项目</h2>
+          <div class="box-play-monster">
+            <div class="health-box">
+              <p>怪兽经验值{{monsterHealth}}</p>
+               <div class="health-value-all">
+               <div class="health-value" :style="{width:monsterHealth + '%'}"></div>
+             </div>
+            </div>
+            <div class="health-box">
+              <p>玩家经验值{{playerHealth}}</p>
+             <div class="health-value-all">
+               <div class="health-value" :style="{width:playerHealth + '%'}"></div>
+             </div>
+            </div>
+            <!-- 游戏结果 -->
+            <div class="game-result" v-if="winner !== null">
+              <p v-if="winner === 'monster'">怪兽获胜!</p>
+              <p v-if="winner === 'playser'">玩家获胜!</p>
+              <p v-if="winner === 'draw'">游戏平局！</p>
+              <button @click="reartGame" class="restart-button">重新开始游戏</button>
+            </div>
+
+            <div class="button-list" v-if="winner === null">
+              <button @click="attack">攻击</button>
+              <button @click="specileAttack">魔法攻击</button>
+              <button @click="healClick" :disabled="attackCount % 3 !==0" 
+              :class="{disabledbutton: attackCount % 3 !==0 }">回血</button>
+              <button @click="surrender">投降</button>
+            </div>
+
+            <div class="operation-log">
+              <h3>操作日志</h3>
+              <ul v-if="operationLogs.length !== 0">
+                <li v-for="(item,index) in operationLogs" :key=`${index-item.value-item.who}`>
+                  <span :class="item.who==='player'?'log-player':'log-monster'">
+                    {{item.who==='player'?'玩家':'怪兽'}}</span>
+                  进行了
+                  <span>{{item.what}}</span>
+                  , 经验值
+                  <span>{{item.value}}</span>
+                </li>
+              </ul>
+            </div>
+
+
+          </div>
         </div>
         <!-- 贴图已保存，明天上班的时候练习 -->
 
